tests/ui/type-alias-impl-trait/higher_kinded_params3.stderr
error[E0792]: expected generic lifetime parameter, found `'x`
  --> $DIR/higher_kinded_params3.rs:27:9
   |
LL | type Tait<'a> = impl std::fmt::Debug + 'a;
   |           -- this generic parameter must be used with a generic lifetime parameter
...
LL |         f = g;
   |         ^^^^^

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0792`.
